--- a/ibaraki/package.json
+++ b/ibaraki/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "loader-runner": "^4.3.0",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4",
+    "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "sass": "^1.69.1",
+    "sass-loader": "^13.3.2",
+    "webpack": "^5.88.2"
   }
 }
