--- a/ibaraki/package.json
+++ b/ibaraki/package.json
@@ -11,7 +11,9 @@
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.9.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "^5.0.1",
     "swiper": "^10.3.1",
     "web-vitals": "^2.1.4",
