--- a/ibaraki/package.json
+++ b/ibaraki/package.json
@@ -1,52 +1,58 @@
 {
-  "name": "ibaraki",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
-    "loader-runner": "^4.3.0",
-    "react": "^18.2.0",
-    "react-awesome-slider": "^4.1.0",
-    "react-bootstrap": "^2.9.0",
-    "react-datepicker": "^4.20.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-scripts": "^5.0.1",
-    "swiper": "^10.3.1",
-    "web-vitals": "^2.1.4",
-    "webpack-manifest-plugin": "^5.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^6.16.0",
-    "sass": "^1.69.1",
-    "sass-loader": "^13.3.2",
-    "webpack": "^5.88.2"
-  }
+	"name": "ibaraki",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"@fortawesome/react-fontawesome": "^0.2.0",
+		"@testing-library/jest-dom": "^5.17.0",
+		"@testing-library/react": "^13.4.0",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.5.1",
+		"bootstrap": "^5.3.2",
+		"json-server": "^0.17.4",
+		"loader-runner": "^4.3.0",
+		"react": "^18.2.0",
+		"react-awesome-slider": "^4.1.0",
+		"react-bootstrap": "^2.9.0",
+		"react-datepicker": "^4.20.0",
+		"react-dom": "^18.2.0",
+		"react-leaflet": "^4.2.1",
+		"react-scripts": "^5.0.1",
+		"swiper": "^10.3.1",
+		"web-vitals": "^2.1.4",
+		"webpack-manifest-plugin": "^5.0.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"server": "json-server --watch src/data/db.json --port 5000",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"react-router-dom": "^6.16.0",
+		"sass": "^1.69.1",
+		"sass-loader": "^13.3.2",
+		"webpack": "^5.88.2"
+	}
 }
