--- a/ibaraki/package.json
+++ b/ibaraki/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ibaraki",
-	"homepage": "https://MargaridaFialho.github.io/ibaraki",
+	"homepage": "https://MargaridaFialho.github.io/Ibaraki/ibaraki",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
