--- a/ibaraki/package.json
+++ b/ibaraki/package.json
@@ -53,6 +53,7 @@
 		]
 	},
 	"devDependencies": {
+		"gh-pages": "^6.0.0",
 		"react-router-dom": "^6.16.0",
 		"sass": "^1.69.1",
 		"sass-loader": "^13.3.2",
